--- a/style.css
+++ b/style.css
@@ -321,7 +321,7 @@ body{
     justify-content: center;
     align-items: center;
     padding: 50px;
-    border-top: 2px solid var(--amarelinho);
+    border-top: 2px solid var(--amarelao);
 }
 
 /*reponsividade*/
