--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
     --pretoforte: black;
     --amarelao: #FFDE17;
     --amarelinho: #FFF6BF;
-    --pretofosco: #393835;
+    --pretofosco: #141414;
     --cinza: #D2D2D2;
     --font: 'Poppins', sans-serif;
 }
@@ -185,7 +185,7 @@ body {
 
 .item-carrossel {
     width: 100vw;
-    height: 800px;
+    height: 700px;
     background-image: linear-gradient(270deg, transparent, var(--pretofosco));
     display: flex;
     justify-content: start;
@@ -253,9 +253,26 @@ body {
 
 .item-carrossel img {
     width: 100vw;
-    height: 800px;
+    height: 700px;
     position: absolute;
     z-index: -1;
+}
+.navigation-carrossel{
+    padding: 40px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+    background-color: var(--pretofosco);
+    width: 100vw;
+}
+.navigation-carrossel input{
+    height: 30px;
+    width: 30px;
+    outline: 0;
+}
+.navigation-carrossel input:hover{
+    outline: var(--amarelao);
 }
 .street-view{
     width: 100%;
@@ -904,15 +921,95 @@ body {
 
 /* footer */
 .rodape {
-    background-color: black;
-    color: white;
+    background-color: var(--pretofosco);
+    color: var(--amarelao);
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 50px;
     border-top: 2px solid var(--amarelao);
+    font-family: var(--font)
+}
+.container-rodape{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    
+}
+.notificacoes{
+    padding: 20px;
+    margin-top: 20px;
+ 
+    display: flex;
+    align-items: center ;
+    gap: 20px;
+    flex-direction: column;
+    width: 400px;
+    height: 300px;
+}
+.contatos{
+    padding: 20px;
+    margin-top: 20px ;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+
+    width: 400px;
+    height: 300px;
+    gap: 20px;
+}
+.email{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.email input{
+    width: 100%;
+    height: 40px;
+    padding-left: 5px; ;
+    outline: 0;
+   font-family: var(--font);
+   font-size: 15px;
+    
+   
 }
 
+.email button{
+    width: 100px;
+    height: 30px;
+    font-family: var(--font);
+    background-color: var(--amarelao);
+    font-weight: 600;
+    border: none;
+    transition: 0.5s;
+}
+.email button:hover{
+    background-color: black;
+    color: var(--amarelao);
+    border: 1px solid var(--amarelao);
+}
+.redes{
+    padding: 20px;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 400px;
+    height: 300px;
+    gap: 20px;
+}
+.rede-social{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.insta, .face{
+    display: flex;
+    gap: 5px;
+}
 /*reponsividade*/
 @media(max-width: 2060px) {
     #botoes-flex {
