--- a/style.css
+++ b/style.css
@@ -149,6 +149,22 @@ body {
     gap: 10px;
 }
 
+#lista-nav {
+    display: flex;
+    list-style: none;
+    gap: 1.5vw;
+}
+
+#lista-navResponsiva {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    gap: 1.5vw;
+    z-index: 9999999;
+    list-style: none;
+    
+}
+
 
 /* <-- end header --> */
 
@@ -158,6 +174,7 @@ body {
     flex-direction: column;
     justify-content: center;
     width: 100vw;
+    overflow: hidden;
     margin-top: 4px;
 }
 
@@ -181,6 +198,13 @@ body {
     overflow: hidden;
     animation: carrossel 20s infinite;
     margin-left: 400vw;
+    /*width: 100vw;*/
+}
+
+html, body, main {
+    position: relative;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 .item-carrossel {
@@ -190,6 +214,20 @@ body {
     display: flex;
     justify-content: start;
     align-items: center;
+    z-index: -1;
+    position: relative;
+}
+
+.item-carrossel::after{
+    content: " ";
+    width: 100vw;
+    height: 700px;
+    background-image: linear-gradient(270deg, transparent, var(--pretofosco));
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+
 }
 
 .localizacao a {
@@ -249,13 +287,14 @@ body {
     padding: 20px;
     color: white;
     border-bottom: 2px solid var(--amarelinho);
+    z-index: 2;
 }
 
 .item-carrossel img {
     width: 100vw;
     height: 700px;
     position: absolute;
-    z-index: -1;
+    z-index: -2;
 }
 .navigation-carrossel{
     padding: 40px;
